--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quikbak",
   "displayName": "quikbak",
   "description": "Convenient quick access context-menu file backup.",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "publisher": "corey",
   "repository": {
     "type": "git",
@@ -18,8 +18,7 @@
     "onStartupFinished",
     "onCommand:quikbak.createBackup",
     "onCommand:quikbak.compressFile",
-    "onCommand:quikbak.decompressFile",
-    "onCommand:quikbak.test"
+    "onCommand:quikbak.decompressFile"
   ],
   "main": "./out/extension.js",
   "contributes": {
@@ -115,17 +114,16 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "pnpm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "pnpm run compile && pnpm run lint",
-    "lint": "eslint src",
-    "test": "vscode-test",
-    "package": "pnpm vscode:prepublish && npx @vscode/vsce package"
+    "vscode:prepublish": "npm run compile",
+    "compile": "webpack",
+    "watch": "webpack --watch",
+    "pretest": "npm run compile && npm run lint",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
-    "@types/node": "20.x",
+    "@types/node": "^20.17.28",
     "@types/sinon": "^10.0.20",
     "@types/vscode": "^1.96.0",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
@@ -133,12 +131,27 @@
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "@vscode/vsce": "^3.2.2",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "eslint": "^9.21.0",
+    "events": "^3.3.0",
+    "path-browserify": "^1.0.1",
     "sinon": "^16.1.3",
-    "typescript": "^5.7.3"
+    "stream-browserify": "^3.0.0",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
+    "util": "^0.12.5",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   },
   "dependencies": {
-    "zip-lib": "^1.0.5"
+    "zip-lib": "^1.0.5",
+    "path-browserify": "^1.0.1",
+    "stream-browserify": "^3.0.0",
+    "browserify-zlib": "^0.2.0",
+    "util": "^0.12.5",
+    "events": "^3.3.0",
+    "buffer": "^6.0.3"
   },
   "pnpm": {
     "overrides": {
